--- a/less/component/countdown.less
+++ b/less/component/countdown.less
@@ -3,7 +3,7 @@
 @import "../lib/color.less";
 @import "../lib/function.less";
 
-//----- countdown 倒计时 -----
+//----- countdown 倒计时 ----- todo
 /*  example:
     <span class="countdown">
 		<span class="cd_quarter quarter_1"></span>
