--- a/less/component/list.less
+++ b/less/component/list.less
@@ -6,7 +6,7 @@
 .list{
 	min-height: 400px;
 
-	li{
+	> li{
 		margin-bottom: @space;
 	}
 }
@@ -15,7 +15,7 @@
 .subList{
 	margin-left: 2em;
 
-	li{
+	> li{
 		text-indent: 0;
 	}
 }
