--- a/less/core/base.less
+++ b/less/core/base.less
@@ -82,8 +82,8 @@ button,
 }
 
 //----- 按钮的不同状态 -----
-input:focus{}
-input:hover{}
+//input:focus{}
+//input:hover{}
 input[disabled]{
     cursor: not-allowed;
 }
