--- a/less/layout.less
+++ b/less/layout.less
@@ -1,5 +1,5 @@
 @charset "utf-8";
-@import "../lib/grid.less";
+@import "lib/grid";
 
 //---------- Layout 布局 汇总 ----------
 // 布局使用流式栅格系统
@@ -46,16 +46,16 @@
 }
 
 // 屏幕宽度 320 以上
-@import "w-320.less";
+@import "layout/w-320";
 
 // 屏幕宽度 480 以上
-@import "w-480.less";
+@import "layout/w-480";
 
 // 屏幕宽度 640 以上
-@import "w-640.less";
+@import "layout/w-640";
 
 // 屏幕宽度 800 以上
-@import "w-800.less";
+@import "layout/w-800";
 
 // 屏幕宽度 1366 以下 页面宽度 1280
-@import "w-1280.less";
+@import "layout/w-1280";
