--- a/less/component/btn.less
+++ b/less/component/btn.less
@@ -8,38 +8,27 @@
 /*  example:
 	<button class="btn" id="btn" type="button" value="">添加</button>
  */
-/*a,button,input:button,input:submit,input:reset*/.btn{
+/*a, button, input:button, input:submit, input:reset*/.btn{
 	float: left;
 
 	height: @line-height;
 	min-width: @btn-min-width;
 
 	border: none;
-//	border: @btn-border-width solid #e0e0e0; //@btn-border;
 	border-radius: @border-radius;
 
-//	margin: 0 @btn-margin @btn-margin 0;
 	margin: @btn-margin 0 0 @btn-margin;
 	padding: 0 @padding-lr;
 
 	background-color: @btn-default-bg;
 
-//	/**
-//	 * 当使用背景图片时或与 .icon 联用时
-//	 */
-//	background-position: 3px 3px !important;
-
 	color: @font-color;
 	font-family: Consolas, \5b8b\4f53;
 	font-size: 16px;
-	line-height: 200%;  // @line-height;  // - @btn-border-width *2;
-
-//	opacity: 0.9;
+	line-height: 200%;
 
 	&:hover{
 		background-color: @btn-hover-bg;
-//		opacity: 1;
-//		outline: 3px solid #c0c0c0;
 	}
 
 	/**
@@ -53,9 +42,12 @@
 /*a*/.btn-link:hover{// 链接 仅用于 a 元素
 	color: @font-color;
 }
-.btn-disabled{// 不可点击状态
+/*a, button, input:button, input:submit, input:reset*/.btn-disabled{// 不可点击状态
 	background-color: @btn-disabled-bg;
 	color: @btn-disabled-color;
+
+	// 阻止触发事件，若为 button、input 标签期望添加 disabled 属性
+	pointer-events: none;
 }
 
 // 作为菜单项的按钮
