--- a/less/style.less
+++ b/less/style.less
@@ -8,20 +8,22 @@
 @import "core/class.less";
 
 // 布局 主要为定位、宽高等属性
-@import "layout/layout.less";
+@import "layout.less";
 
 // 组件 主要为图片、颜色等属性
-@import "component/component.less";
+@import "component.less";
 
 // 模块 主要为各个模块中的细节样式 包括字体大小、行距等属性
-@import "module/module.less";
+@import "module.less";
 
 // 皮肤
 @import "index.less";   // 首页特别样式
-//@import "skin/default.less";
+
+// 动画（主要为 CSS3 等属性，存在兼容性）
+@import "animate.less";
 
 // 插件 UI JS 插件所需要的 CSS
 //@import "ui/ui.less";
 
-// 公用 class 样式
-//@import "core/class.less";
+// 皮肤？=> 应放置为单独文件
+//@import "skin/default.less";
