--- a/less/component/code.less
+++ b/less/component/code.less
@@ -5,7 +5,9 @@
 	padding: 2px 4px;
 	font-size: 90%;
 	color: #c7254e;
-	white-space: nowrap;
 	background-color: #f9f2f4;
 	border-radius: 4px;
+
+	word-break: break-all;
+	word-wrap: break-word;
 }
