--- a/less/component/input.less
+++ b/less/component/input.less
@@ -5,8 +5,8 @@
 @import "../lib/grid.less";
 
 //----- input 表单项 -----
-input[type="text"],
-input[type="password"],
+//input[type="text"],
+//input[type="password"],
 /*input:text, input:password*/.input{
     width: 100%;
 
@@ -20,11 +20,11 @@ input[type="password"],
     line-height: @line-height;
 }
 // 表单项状态
-input:focus,
+//input:focus,
 .input-focus{// 表单项获得焦点时
 	background: @input-focus-bg;
 }
-input[disabled],
+//input[disabled],
 .input-disabled{// 表单项禁用时
 
 }
