--- a/less/lib/color.less
+++ b/less/lib/color.less
@@ -318,6 +318,9 @@
 @palette_section-blue:      #00f;   // 调色板-蓝色系
 @palette_section-magenta:   #f0f;   // 调色板-紫色系
 
+//----- profile 个人资料 -----
+@profile_section-bg:    @c29;   //
+
 //----- favorite 收藏夹 -----
 @favor-li-bg:   @c29;   // 收藏夹背景颜色
 
