--- a/less/module.less
+++ b/less/module.less
@@ -109,13 +109,15 @@
 
 @import "module/calendar";    // 日历
 
+@import "module/profile";   // 个人资料
+
 @import "module/weather";     // 天气
 
 @import "module/favorite";    // 收藏夹
 
 @import "module/rss";         // 订阅
 
-//@import "timeLine.less";    // 时间轴
+@import "module/timeLine";    // 时间轴
 
 @import "module/advert";      // 广告区
 
