--- a/less/component.less
+++ b/less/component.less
@@ -8,22 +8,27 @@
 //----- 基础组件 -----
 @import "component/code";    // 行内代码
 
-@import "component/form";    // 表单
+//----- 表单 相关 -----
+@import "component/form";   // 表单
 
-@import "component/btn";     // 按钮  todo
+@import "component/btn";    // 按钮  todo
 
-@import "component/input";   // 表单项 todo
+@import "component/input";  // 表单项 文本输入框 todo
 
-@import "component/msg";     // 消息
+@import "component/checkbox";   // 表单项 复选框
+
+@import "component/radio";  // 表单项
+
+
+@import "component/msg";    // 消息
 
 @import "component/scrollBar";   // 滚动条 todo
 
-@import "component/icon";    // 图标
-
 @import "component/list";    // 列表
 
-//----- 高级组件 -----
+@import "component/icon";    // 图标
 
+//----- 高级组件 -----
 @import "component/logo";    // Logo
 
 @import "component/page";    // 分页
