--- a/less/module.less
+++ b/less/module.less
@@ -117,7 +117,7 @@
 
 @import "module/rss";         // 订阅
 
-@import "module/timeLine";    // 时间轴
+//@import "module/timeLine";    // 时间轴
 
 @import "module/advert";      // 广告区
 
