--- a/less/style.less
+++ b/less/style.less
@@ -23,7 +23,7 @@
 @import "animate.less";
 
 // 插件 UI JS 插件所需要的 CSS
-//@import "ui/ui.less";
+@import "ui.less";
 
 // 皮肤？=> 应放置为单独文件
 //@import "skin/default.less";
