--- a/less/ui.less
+++ b/less/ui.less
@@ -2,4 +2,6 @@
 
 //@import "icon.less";
 
-@import "ui/dialog";      // 弹窗样式
+//@import "ui/dialog";      // 弹窗样式
+
+@import "ui/timeLine";  // 时间轴
