--- a/less/module/timeLine.less
+++ b/less/module/timeLine.less
@@ -7,10 +7,12 @@
 .module-timeLine{
     background: url("../image/default/metro/TimeLine.png") no-repeat scroll 35px 35px #44CEF6;
 }
+
 .timeLine_container{
     position: absolute;
     left: 50%;
 }
+// 时间轴 中线
 .timeLine_line{
     overflow: hidden;
     position: absolute;
@@ -18,7 +20,7 @@
     left: -5px;
     height:100%;
     width: 10px;
-    background: url("../image/default/line.jpg") center;
+    background: #efefef;
 }
 
 .timeLine_date{
