--- a/less/footer.less
+++ b/less/footer.less
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
-@import "../lib/color.less";
-@import "../lib/function.less";
-@import "../lib/grid.less";
-@import "../lib/z-index.less";
+@import "lib/color.less";
+@import "lib/function.less";
+@import "lib/grid.less";
+@import "lib/z-index.less";
 
 //---------- Footer 页脚 ----------
 .Footer{
