--- a/less/layout/w-320.less
+++ b/less/layout/w-320.less
@@ -4,19 +4,19 @@
 // 针对宽度为 480px 以下的设备
 // Container 宽度 320
 // 共 8 列
-// .module-large    8
-// .module-big      8
-// .module-normal   8
-// .module-small    8(默认)
-// .module-tiny     4(默认)
+// .large    8
+// .big      8
+// .normal   8
+// .small    8(默认)
+// .tiny     4(默认)
 @media screen and (max-width:479px){
     .Container{
         width: @grid-unit*8;
     }
 
-    .module-large,
-    .module-big,
-    .module-normal{
+    .large,
+    .big,
+    .normal{
         .grid-x(8);
     }
 }
