--- a/less/layout/w-640.less
+++ b/less/layout/w-640.less
@@ -5,22 +5,22 @@
 // 针对宽度为 640px 至 800px 以下的设备
 // Container 宽度 480
 // 共 12 列
-// .module-large    16
-// .module-big      8
-// .module-normal   88
-// .module-small    8(默认)
-// .module-tiny     4(默认)
+// .large    16
+// .big      8
+// .normal   88
+// .small    8(默认)
+// .tiny     4(默认)
 @media screen and (min-width:640px) and (max-width:799px){
     .Container{
         width: @grid-unit*16;
     }
 
-    .module-large{
+    .large{
         .grid-x(16);
     }
 
-    .module-big,
-    .module-normal{
+    .big,
+    .normal{
         .grid-x(8);
     }
 }
