--- a/less/layout/w-800.less
+++ b/less/layout/w-800.less
@@ -4,17 +4,17 @@
 // 针对宽度为 800px 至 1024px 以下的设备
 // Container 宽度 800
 // 共 20 列
-// .module-large    20
-// .module-big      16(默认)
-// .module-normal   12(默认)
-// .module-small    8(默认)
-// .module-tiny     4(默认)
+// .large    20
+// .big      16(默认)
+// .normal   12(默认)
+// .small    8(默认)
+// .tiny     4(默认)
 @media screen and (min-width:800px) and (max-width:959px){
     .Container{
         width: @grid-unit *20;
     }
 
-    .module-large{
+    .large{
         .grid-x(20);
     }
 }
