--- a/less/style.less
+++ b/less/style.less
@@ -16,6 +16,15 @@
 // 模块 主要为各个模块中的细节样式 包括字体大小、行距等属性
 @import "module.less";
 
+// 页头
+@import "header.less";
+
+// 页脚
+@import "footer.less";
+
+// 导航
+@import "nav.less";
+
 // 皮肤
 @import "index.less";   // 首页特别样式
 
