--- a/less/nav.less
+++ b/less/nav.less
@@ -7,7 +7,118 @@
 //----- Nav 导航 -----
 .nav{
 	margin: 0 auto;
+
+	.btn{
+		width: 70px;
+		height: 70px;
+
+		min-width: 60px;
+
+		border: none;
+		border-radius: 0;
+		margin: 0 @space 0 0;
+		//		padding: 0;
+		//		padding-left: 80px;
+
+		background-color: transparent;
+		//		background-color: #dfdfdf;
+		background-position: 10px 10px !important;
+		background-repeat: no-repeat;
+	}
+
+	.btn:hover{
+		background-color: @a-hover;
+	}
+
+	.btn-backTop{
+		margin-right: 0;
+	}
 }
+//----- menu 菜单 -----
+/**
+ * 这是一个基于业务的组件，故放在此处
+ */
+.menu{
+	position: absolute;
+	top: 70px;
+	left: 80px;
+	//	right: 0;
+	width: 240px;
+
+	margin: 0 -5px;
+	padding-bottom: 5px;
+	background: #fff;   //#392f41;    //
+
+	.boxShadow(5px 5px 5px #888);
+
+	.btn-menuItem{
+		float: none;
+		display: block;
+		width: auto !important;
+
+		margin: 10px 5px 0;
+		padding: 0 0 0 120px;
+	}
+}
+/**
+ * 这些是根据业务功能来定制的背景图片及背景颜色
+ */
+.btn-menu{
+	background-image: url("../image/default/btn/btn-menu.png");
+}
+.btn-backTop{
+	float: right;
+	background-image: url("../image/default/btn/btn-backTop.png");
+}
+.btn-menuItem-home{
+	background-image: url("../image/default/menu/menu_item-home.png");
+}
+.btn-menuItem-copyright{
+	background-image: url("../image/default/menu/menu_item-copyright.png");
+}
+.btn-menuItem-blog:before{
+	background-color: #00d8cc;
+	background-image: url("../image/default/menu/menu_item-blog.png");
+}
+.btn-menuItem-blog:hover{
+	background-color: #00d8cc !important;
+}
+.btn-menuItem-document:before{
+	background-color: #4617b4;
+	background-image: url("../image/default/menu/menu_item-document.png");
+}
+.btn-menuItem-document:hover{
+	background-color: #4617b4 !important;
+}
+.btn-menuItem-editor:before{
+	background-color: #78ba00;
+	background-image: url("../image/default/menu/menu_item-editor.png");
+}
+.btn-menuItem-editor:hover{
+	background-color: #78ba00 !important;
+}
+.btn-menuItem-favorite:before{
+	background-color: #aa40ff;
+	background-image: url("../image/default/menu/menu_item-favorite.png");
+}
+.btn-menuItem-favorite:hover{
+	background-color: #aa40ff !important;
+}
+.btn-menuItem-rss:before{
+	background-color: #4e0000;
+	background-image: url("../image/default/menu/menu_item-rss.png");
+}
+.btn-menuItem-rss:hover{
+	background-color: #4e0000 !important;
+}
+.btn-menuItem-palette:before{
+	background-color: #ff76bc;
+	background-image: url("../image/default/menu/menu_item-palette.png");
+}
+.btn-menuItem-palette:hover{
+	background-color: #ff76bc !important;
+}
+
 //.module-nav{
 //    h1{
 //        height:35px;
